Add Docker file (without compose) & update cors